# QuickGraphLib

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENCE  MANIFEST.in  README.md  activate_venv.ps1  pyproject.toml  requirements.txt  run_qmllint.ps1  run_qmllint.py  setup.cfg  setup.py  setup_venv.ps1
.github/: CODEOWNERS
.github/workflows/: build.yml
QuickGraphLib/: AntialiasingContainer.qml  Axis.qml  CMakeLists.txt  ColorMaps.cpp  ColorMaps.hpp  ColorMesh.cpp  ColorMesh.hpp  DataTypes.cpp  DataTypes.hpp  Global.hpp  GraphArea.qml  Helpers.js  ImageView.cpp  ImageView.hpp  Plugin.cpp  QuickGraphLib.hpp  ScalingContainer.qml  ShapeRepeater.qml  TickLabel.qml  ZoomPanHandler.qml  __init__.py  contours.py  qmldir
QuickGraphLib/GraphItems/: AxHLine.qml  AxHSpan.qml  AxVLine.qml  AxVSpan.qml  Bar.qml  BarHorizontal.qml  BarVertical.qml  BasicLegend.qml  BasicLegendItem.qml  BoxPlotHorizontal.qml  BoxPlotVertical.qml  CMakeLists.txt  ColorMesh.qml  Contour.qml  Ellipse.qml  EllipseRoi.qml  GraphHandle.qml  GraphItemDragHandler.qml  Grid.qml  Histogram.qml  Line.qml  LineSegment.qml  LineSegmentEditor.qml  LineSegmentRoi.qml  Marker.qml  Polygon.qml  PolygonRoi.qml  Polyline.qml  PolylineRoi.qml  Rectangle.qml  RectangleRoi.qml  RoiHandle.qml  RoiHandleRepeater.qml  RoiHitTest.js  qmldir
QuickGraphLib/GraphItems/helpers/: GridHelper.cpp  GridHelper.hpp  HistogramHelper.cpp  HistogramHelper.hpp
QuickGraphLib/PreFabs/: CMakeLists.txt  ImageAxes.qml  XYAxes.qml  qmldir
QuickGraphLib/bindings/: Bindings.hpp  Bindings.xml  CMakeLists.txt  ShibokenHelpers.cpp  ShibokenHelpers.hpp  pyigen.py  pyside_config.py  qtqml.rst
QuickGraphLib/bindings/glue/: DataTypes.cpp
QuickGraphLib/doc/: AxesGridLayout.drawio  export.qdoc  graphitems.qdoc  graphstructure.qdoc  index.qdoc  interaction.qdoc  module-cpp.qdoc  module.qdoc  prefabs.qdoc  python_helpers.qdoc
QuickGraphLib/helpers/: AxisHelper.cpp  AxisHelper.hpp  Foreign.hpp  Helpers.cpp  Helpers.hpp  ShapeRepeaterHelper.cpp  ShapeRepeaterHelper.hpp
QuickGraphLib/python/: __init__.py  contours.py
ci/: find_qt.py  fixup_qt.py  setup_qt.py
docs/: build_docs.py  config.qdocconf  style.css
examples/: AllTheAxes.qdoc  AllTheAxes.qml  BarChart.qml  BarChartHorizontal.qdoc  BarChartHorizontal.qml  BarChartVertical.qdoc  BarChartVertical.qml  BasicHistogram.qdoc  BasicHistogram.qml  BasicSinGraph.qdoc  BasicSinGraph.qml  BasicSinGraphNoPrefabs.qdoc  BasicSinGraphNoPrefabs.qml  BoxPlots.qdoc  BoxPlots.qml  BuiltinColormaps.qdoc  BuiltinColormaps.qml  ColorMappedImages.qdoc  ColorMappedImages.qml  ColorMesh.qdoc  ColorMesh.qml  Complex.qdoc  Complex.qml  Contours.qdoc  Contours.qml  Conway.qdoc  Conway.qml  DarkSinGraph.qdoc  DarkSinGraph.qml  DraggableRegion.qdoc  DraggableRegion.qml  Ellipse.qdoc  Ellipse.qml  ExampleGallery.qml  ImageAlignment.qdoc  ImageAlignment.qml  InvertedAxes.qdoc  InvertedAxes.qml  LineSegment.qdoc  LineSegment.qml  (+29 more)
quickgraphlib_helpers/: __init__.py  consts.py  contours.py  export.py
tests/: python_exporter.py  test_exports.py  test_roi_hit_tests.py
tests/extra_examples/: ImageExport.qml  VectorImageExport.qml
